--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-remark-responsive-iframe": "^1.4.2",
     "gatsby-source-filesystem": "^1.4.2",
     "gatsby-transformer-remark": "^1.7.0",
+    "husky": "^0.14.3",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
     "react": "^15.6.1",
@@ -66,7 +67,7 @@
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
-    "clean": "rm -rf public",
+    "clean": "rm -rf public",    
     "lint:js": "eslint --ext .js,.jsx --ignore-pattern public,static .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
