--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public",    
     "deploy": "gh-pages -d public",
+    "deploy-help": "gh-pages --help",
     "lint:js": "eslint --ext .js,.jsx --ignore-pattern public,static .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
