--- a/package.json
+++ b/package.json
@@ -36,18 +36,17 @@
     "react-icons": "^2.2.7",
     "react-share": "^1.15.1",
     "react-twitter-widgets": "^1.4.0",
+    "semistandard": "^11.0.0",
     "styled-components": "^2.2.3"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
-    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "gh-pages": "^1.0.0",
-    "prettier": "^1.5.3",
     "remark-cli": "^4.0.0",
     "remark-preset-lint-recommended": "^3.0.1",
     "stylefmt": "^6.0.0",
@@ -67,7 +66,7 @@
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
-    "clean": "rm -rf public",    
+    "clean": "rm -rf public",
     "deploy": "gh-pages -d public",
     "deploy-help": "gh-pages --help",
     "lint:js": "eslint --ext .js,.jsx --ignore-pattern public,static .",
