--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.1",
   "author": "Eric Windmill <eric@ericwindmill.com>",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-plugin-lodash": "^3.2.11",
     "gatsby": "^1.8.11",
     "gatsby-link": "^1.6.7",
