--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-docs-starter",
-  "description": "GatsbyJS starter designed with documentation and tutorial websites in mind.",
+  "name": "nact.io",
+  "description": "Site for nact.io",
   "version": "1.0.1",
-  "author": "Eric Windmill <eric@ericwindmill.com>",
+  "author": "Nick Cuthbert <github@ncthbrt.com>",
   "dependencies": {
     "animate.css": "^3.5.2",
     "babel-plugin-lodash": "^3.2.11",
